# ceph-lcm

./: .bumpver.json  .coveragerc  .dockerignore  .editorconfig  .env  .gitignore  .gitmodules  .mailmap  .readthedocs.yml  .scd.yaml  .travis.yml  CHANGELOG.rst  Makefile  README.rst  Vagrantfile  ansible.cfg  build-requirements.txt  constraints.txt  development-requirements.txt  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.test-keystone.yml  docker-compose.yml  openapi.yaml  optional-requirements.txt  requirements-api.txt  requirements-client.txt  requirements-common.txt  requirements-controller.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
backend/api/: __init__.py  exceptions.py  requirements.txt  setup.cfg  setup.py  wsgi.py
backend/api/cephlcm_api/: __init__.py  auth.py  config.py  exceptions.py  handlers.py  pagination.py  validators.py  wsgi.py
backend/api/cephlcm_api/views/: __init__.py  generic.py  info.py
backend/api/cephlcm_api/views/v1/: __init__.py  auth.py  cluster.py  execution.py  info.py  password_reset.py  permission.py  playbook.py  playbook_configuration.py  role.py  server.py  user.py
backend/api/decapod_api/: __init__.py  auth.py  config.py  exceptions.py  handlers.py  pagination.py  validators.py  wsgi.py
backend/api/decapod_api/auth/: __init__.py  common.py  keystone.py  native.py
backend/api/decapod_api/views/: __init__.py  generic.py
backend/api/decapod_api/views/v1/: __init__.py  auth.py  cinder_integration.py  cluster.py  execution.py  info.py  misc.py  password_reset.py  permission.py  playbook.py  playbook_configuration.py  role.py  server.py  user.py
backend/api/shrimp_api/: __init__.py  auth.py  config.py  exceptions.py  handlers.py  pagination.py  validators.py  wsgi.py
backend/api/shrimp_api/views/: __init__.py  generic.py
backend/api/shrimp_api/views/v1/: __init__.py  auth.py  cluster.py  execution.py  info.py  password_reset.py  permission.py  playbook.py  playbook_configuration.py  role.py  server.py  user.py
backend/api/views/v1/: __init__.py  playbook_configuration.py
backend/common/: MANIFEST.in  config.py  plugins.py  retryutils.py  setup.cfg  setup.py  stdeb.cfg
backend/common/cephlcm_common/: cliutils.py  config.py  emailutils.py  exceptions.py  execution_step.py  log.py  networkutils.py  passwords.py  playbook_plugin.py  plugins.py  retryutils.py  wrappers.py
backend/common/cephlcm_common/configs/: defaults.toml  defaults.yaml
backend/common/cephlcm_common/models/: cluster.py  db.py  execution.py  execution_step.py  generic.py  kv.py  lock.py  migration_script.py  password_reset.py  playbook_configuration.py  role.py  server.py  task.py  token.py  user.py
backend/common/decapod_common/: cliutils.py  config.py  diskutils.py  emailutils.py  exceptions.py  log.py  networkutils.py  passwords.py  pathutils.py  playbook_plugin.py  playbook_plugin_hints.py  plugins.py  process.py  retryutils.py  timeutils.py  wrappers.py
backend/common/decapod_common/configs/: ceph-ansible-defaults.yaml  defaults.yaml
backend/common/decapod_common/facts/: ceph_facts_module.py.j2
backend/common/decapod_common/models/: cinder_integration.py  cluster.py  cluster_data.py  db.py  execution.py  execution_step.py  generic.py  kv.py  lock.py  migration_script.py  password_reset.py  playbook_configuration.py  properties.py  role.py  server.py  task.py  token.py  user.py
backend/common/decapod_common/playbooks/: init.yaml  vars.yaml
backend/common/models/: cluster.py  execution_step.py  generic.py  kv.py  role.py  server.py  task.py  token.py
backend/common/shrimp_common/: cliutils.py  config.py  diskutils.py  emailutils.py  exceptions.py  log.py  networkutils.py  passwords.py  playbook_plugin.py  plugins.py  retryutils.py  timeutils.py  wrappers.py
backend/common/shrimp_common/configs/: defaults.yaml
backend/common/shrimp_common/facts/: ceph_facts_module.py.j2
backend/common/shrimp_common/models/: cluster.py  db.py  execution.py  execution_step.py  generic.py  kv.py  lock.py  migration_script.py  password_reset.py  playbook_configuration.py  role.py  server.py  task.py  token.py  user.py
backend/controller/: daemon.py  inventory.py  mainloop.py  requirements.txt  setup.cfg  setup.py  taskpool.py
backend/controller/ansible_execution_step_callback/: cb_execution.py
backend/controller/cephlcm_controller/: cron.py  daemon.py  exceptions.py  inventory.py  mainloop.py  taskpool.py
backend/controller/decapod_controller/: apt.py  ceph_verify.py  cron.py  daemon.py  exceptions.py  inventory.py  mainloop.py  taskpool.py
backend/controller/shrimp_controller/: cron.py  daemon.py  exceptions.py  inventory.py  mainloop.py  taskpool.py
cephlcmcli/: requirements.txt  setup.cfg  setup.py
cephlcmcli/cephlcm_cli/: __init__.py  cloud_config.py  cluster.py  decorators.py  execution.py  main.py  param_types.py  password_reset.py  permission.py  playbook.py  playbook_configuration.py  role.py  server.py  user.py  utils.py
cephlcmcli/cephlcm_cli/cli/: __init__.py  cloud_config.py  cluster.py  decorators.py  execution.py  main.py  param_types.py  permission.py  playbook.py  playbook_configuration.py  role.py  server.py  user.py
cephlcmlib/: __init__.py  auth.py  cli.py  client.py  exceptions.py  model.py  modelclient.py  requirements.txt  setup.cfg  setup.py
cephlcmlib/cephlcmlib/: __init__.py  auth.py  client.py  cloud_config.py  exceptions.py
cephlcmlib/cephlcmlib/cli/: __init__.py  cloud_config.py  cluster.py  execution.py  permission.py  playbook.py  playbook_configuration.py  role.py  server.py  user.py
cephlcmlib/cli/: __init__.py  cluster.py  decorators.py  execution.py  misc.py  param_types.py  permission.py  playbook.py  playbook_configuration.py  role.py  server.py  user.py
docs/: Makefile  (+3 more)
plugins/alerts/: email.py  setup.cfg
plugins/alerts/emails/: requirements.txt  setup.cfg  setup.py
plugins/alerts/emails/cephlcm_email_alerts/: email.py
plugins/alerts/emails/decapod_plugin_alerts_emails/: email.py
plugins/alerts/emails/shrimp_email_alerts/: email.py
(+1157 files in other folders)
