[metadata]
name = cephlcm
version = 0.1
summary = Ceph lifecycle management
maintainer = Mirantis
mainteiner-email = sarkhipov@mirantis.com
author = Mirantis
author-email = sarkhipov@mirantis.com
license = Apache2
requires-python = >=2.7
requires-dist =
  setuptools
home-page = https://github.com/Mirantis/ceph-lcm
project-url = https://github.com/Mirantis/ceph-lcm
classifier =
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 2.7

[files]
packages =
  cephlcm
package_data =
  cephlcm =
    configs/*.toml

[global]
setup-hooks =
  pbr.hooks.setup_hook

[pbr]
warnerrors = true

[flake8]
show-source = True
exclude = build,dist,docs/conf.py,*.egg-info,.eggs,.cache,.tox
