[metadata]
name = cephlcm_api
version = 0.1.0
summary = Ceph lifecycle management API service
maintainer = Mirantis
mainteiner-email = sarkhipov@mirantis.com
author = Mirantis
author-email = sarkhipov@mirantis.com
license = Apache2
requires-python = >=3.4
requires-dist =
  setuptools
home-page = https://github.com/Mirantis/ceph-lcm
project-url = https://github.com/Mirantis/ceph-lcm
classifier =
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5

[files]
packages =
  cephlcm_api

[global]
setup-hooks =
  pbr.hooks.setup_hook

[entry_points]
wsgi_scripts =
  cephlcm-api = cephlcm_api:create_application

[pbr]
warnerrors = true

[flake8]
exclude = build,dist,docs/conf.py,*.egg-info,.eggs,.cache,.tox,plugins/playbook/deploy_cluster/cephlcm_deploy_cluster/playbooks
inline-quotes = "
application-import-names = cephlcm_api,cephlcm_common,cephlcm_controller
import-order-style = smarkets
