[metadata]
name = cephlcm_controller
version = 0.1
summary = Ceph lifecycle management controller service
maintainer = Mirantis
mainteiner-email = sarkhipov@mirantis.com
author = Mirantis
author-email = sarkhipov@mirantis.com
license = Apache2
requires-python = >=3.4
requires-dist =
  setuptools
home-page = https://github.com/Mirantis/ceph-lcm
project-url = https://github.com/Mirantis/ceph-lcm
classifier =
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5

[files]
packages =
  cephlcm_controller
console_scripts =
  cephlcm-controller = cephlcm_controller.daemon:main
  cephlcm-inventory = cephlcm_controller.inventory:main

[global]
setup-hooks =
  pbr.hooks.setup_hook

[pbr]
warnerrors = true

[flake8]
exclude = build,dist,docs/conf.py,*.egg-info,.eggs,.cache,.tox,plugins/playbook/deploy_cluster/cephlcm_deploy_cluster/playbooks
inline-quotes = "
application-import-names = cephlcm_api,cephlcm_common,cephlcm_controller
import-order-style = smarkets
